# Qt

./: README.md
QML/svg/ampMeter00_00/ampMeter00/: main.qml
QML/svg/ampMeter00_01/ampMeter00/: main.qml
QML/svg/ampMeter00_02/ampMeter00/: main.qml
QML/svg/ampMeter00_03/ampMeter00/: CMakeLists.txt  main.qml
QML/svg/ampMeter00_04/ampMeter00/: Botonera.qml  CMakeLists.txt  main.qml  recursos.qrc
QML/svg/ampMeter00_05/ampMeter00/: AmpMeter.qml  CMakeLists.txt  main.qml
QML/svg/ampMeter00_06/ampMeter00/: main.cpp  main.qml
QML/svg/ampMeter00_07/ampMeter00/: main.qml
QML/svg/ampMeter00_08/ampMeter00/: AmpMeter.qml  BarraLliscant.qml  CMakeLists.txt  main.qml
QML/svg/ampMeter00_09/ampMeter00/: AmpMeter.qml  CMakeLists.txt  Controlador.qml  Vista.qml  main.qml
UDPbasic02/: udpdlg.cpp  udpdlg.h  udpdlg.ui
cannonBarrel05/: cannonBarrel05.pro  cannonbarreldlg.cpp  cannonbarreldlg.h  cannonbarreldlg.ui  cannonfield.cpp  cannonfield.h  main.cpp
gauge01/imatge01/: Indicador00.ui.qml  main.cpp  main.qml  qml.qrc
gauge01/madeWithGimp/: Indicador00.qml  indicador00.xcf
lcdRangeUdp02/: lcdrange.cpp  lcdrange.h  lcdrangeUdp02.pro  main.cpp  udplcdrangedlg.cpp  udplcdrangedlg.h  udplcdrangedlg.ui
udpRxTx_mDNS/: ginyudp.cpp  ginyudp.h  ginyudp.ui  ginyudprxtx.cpp  ginyudprxtx.h  ginyudprxtx.ui  ginyudptramet.cpp  ginyudptramet.h  ginyudptramet.ui  main.cpp  udpRxTx_mDNS.pro
